amc/parsing/amachineParser.py
# Generated from amachine.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class amachineParser ( Parser ):

    grammarFileName = "amachine.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "','", "')'", "<INVALID>", "'init'", 
                     "<INVALID>", "'symbols'", "'...'", "'P:'", "'<-'", 
                     "'->'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "COMMENT", "INIT", "INCLUDE", "SYMBOLS", "DEFAULT", 
                      "PRINT", "LEFT", "RIGHT", "T_STATE_NAME", "STATE_NAME", 
                      "T_SYMBOL_NAME", "SYMBOL_NAME", "NL", "WS" ]

    RULE_body = 0
    RULE_stmt = 1
    RULE_include = 2
    RULE_symbols = 3
    RULE_symbol_decl = 4
    RULE_initial = 5
    RULE_m_function_decl = 6
    RULE_t_decl = 7
    RULE_am_state_decl = 8
    RULE_am_state_rules = 9
    RULE_am_state_rule = 10
    RULE_am_state_rule_symbol = 11
    RULE_am_state_rule_actions = 12
    RULE_am_state_rule_action = 13
    RULE_name = 14
    RULE_am_state = 15
    RULE_m_function = 16
    RULE_symbol = 17

    ruleNames =  [ "body", "stmt", "include", "symbols", "symbol_decl", 
                   "initial", "m_function_decl", "t_decl", "am_state_decl", 
                   "am_state_rules", "am_state_rule", "am_state_rule_symbol", 
                   "am_state_rule_actions", "am_state_rule_action", "name", 
                   "am_state", "m_function", "symbol" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    COMMENT=4
    INIT=5
    INCLUDE=6
    SYMBOLS=7
    DEFAULT=8
    PRINT=9
    LEFT=10
    RIGHT=11
    T_STATE_NAME=12
    STATE_NAME=13
    T_SYMBOL_NAME=14
    SYMBOL_NAME=15
    NL=16
    WS=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(amachineParser.StmtContext)
            else:
                return self.getTypedRuleContext(amachineParser.StmtContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(amachineParser.NL)
            else:
                return self.getToken(amachineParser.NL, i)

        def getRuleIndex(self):
            return amachineParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = amachineParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << amachineParser.INIT) | (1 << amachineParser.INCLUDE) | (1 << amachineParser.SYMBOLS) | (1 << amachineParser.STATE_NAME) | (1 << amachineParser.NL))) != 0):
                self.state = 42
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [amachineParser.INIT, amachineParser.INCLUDE, amachineParser.SYMBOLS, amachineParser.STATE_NAME]:
                    self.state = 36
                    self.stmt()
                    pass
                elif token in [amachineParser.NL]:
                    self.state = 38 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 37
                            self.match(amachineParser.NL)

                        else:
                            raise NoViableAltException(self)
                        self.state = 40 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self):
            return self.getTypedRuleContext(amachineParser.IncludeContext,0)


        def symbols(self):
            return self.getTypedRuleContext(amachineParser.SymbolsContext,0)


        def initial(self):
            return self.getTypedRuleContext(amachineParser.InitialContext,0)


        def m_function_decl(self):
            return self.getTypedRuleContext(amachineParser.M_function_declContext,0)


        def am_state_decl(self):
            return self.getTypedRuleContext(amachineParser.Am_state_declContext,0)


        def getRuleIndex(self):
            return amachineParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = amachineParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.include()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.symbols()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.initial()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 50
                self.m_function_decl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 51
                self.am_state_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCLUDE(self):
            return self.getToken(amachineParser.INCLUDE, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(amachineParser.NL)
            else:
                return self.getToken(amachineParser.NL, i)

        def getRuleIndex(self):
            return amachineParser.RULE_include

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = amachineParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(amachineParser.INCLUDE)
            self.state = 56 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 55
                    self.match(amachineParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 58 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SymbolsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOLS(self):
            return self.getToken(amachineParser.SYMBOLS, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(amachineParser.WS)
            else:
                return self.getToken(amachineParser.WS, i)

        def symbol_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(amachineParser.Symbol_declContext)
            else:
                return self.getTypedRuleContext(amachineParser.Symbol_declContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(amachineParser.NL)
            else:
                return self.getToken(amachineParser.NL, i)

        def getRuleIndex(self):
            return amachineParser.RULE_symbols

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSymbols" ):
                return visitor.visitSymbols(self)
            else:
                return visitor.visitChildren(self)




    def symbols(self):

        localctx = amachineParser.SymbolsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_symbols)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(amachineParser.SYMBOLS)
            self.state = 70
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 62 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 61
                        self.match(amachineParser.NL)
                        self.state = 64 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==amachineParser.NL):
                            break

                    self.state = 66
                    self.match(amachineParser.WS)
                    self.state = 67
                    self.symbol_decl() 
                self.state = 72
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 74 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 73
                    self.match(amachineParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 76 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Symbol_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL_NAME(self):
            return self.getToken(amachineParser.SYMBOL_NAME, 0)

        def getRuleIndex(self):
            return amachineParser.RULE_symbol_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSymbol_decl" ):
                return visitor.visitSymbol_decl(self)
            else:
                return visitor.visitChildren(self)




    def symbol_decl(self):

        localctx = amachineParser.Symbol_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_symbol_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(amachineParser.SYMBOL_NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INIT(self):
            return self.getToken(amachineParser.INIT, 0)

        def WS(self):
            return self.getToken(amachineParser.WS, 0)

        def am_state(self):
            return self.getTypedRuleContext(amachineParser.Am_stateContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(amachineParser.NL)
            else:
                return self.getToken(amachineParser.NL, i)

        def getRuleIndex(self):
            return amachineParser.RULE_initial

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitial" ):
                return visitor.visitInitial(self)
            else:
                return visitor.visitChildren(self)




    def initial(self):

        localctx = amachineParser.InitialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_initial)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(amachineParser.INIT)
            self.state = 82 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 81
                self.match(amachineParser.NL)
                self.state = 84 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==amachineParser.NL):
                    break

            self.state = 86
            self.match(amachineParser.WS)
            self.state = 87
            self.am_state()
            self.state = 89 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 88
                    self.match(amachineParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 91 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class M_function_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATE_NAME(self):
            return self.getToken(amachineParser.STATE_NAME, 0)

        def t_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(amachineParser.T_declContext)
            else:
                return self.getTypedRuleContext(amachineParser.T_declContext,i)


        def am_state_rules(self):
            return self.getTypedRuleContext(amachineParser.Am_state_rulesContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(amachineParser.WS)
            else:
                return self.getToken(amachineParser.WS, i)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(amachineParser.NL)
            else:
                return self.getToken(amachineParser.NL, i)

        def getRuleIndex(self):
            return amachineParser.RULE_m_function_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitM_function_decl" ):
                return visitor.visitM_function_decl(self)
            else:
                return visitor.visitChildren(self)




    def m_function_decl(self):

        localctx = amachineParser.M_function_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_m_function_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(amachineParser.STATE_NAME)
            self.state = 94
            self.match(amachineParser.T__0)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==amachineParser.WS:
                self.state = 95
                self.match(amachineParser.WS)


            self.state = 98
            self.t_decl()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==amachineParser.WS:
                self.state = 99
                self.match(amachineParser.WS)


            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==amachineParser.T__1:
                self.state = 102
                self.match(amachineParser.T__1)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==amachineParser.WS:
                    self.state = 103
                    self.match(amachineParser.WS)


                self.state = 106
                self.t_decl()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==amachineParser.WS:
                    self.state = 107
                    self.match(amachineParser.WS)


                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(amachineParser.T__2)
            self.state = 116
            self.am_state_rules()
            self.state = 118 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 117
                    self.match(amachineParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 120 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class T_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_STATE_NAME(self):
            return self.getToken(amachineParser.T_STATE_NAME, 0)

        def T_SYMBOL_NAME(self):
            return self.getToken(amachineParser.T_SYMBOL_NAME, 0)

        def getRuleIndex(self):
            return amachineParser.RULE_t_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitT_decl" ):
                return visitor.visitT_decl(self)
            else:
                return visitor.visitChildren(self)




    def t_decl(self):

        localctx = amachineParser.T_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_t_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            _la = self._input.LA(1)
            if not(_la==amachineParser.T_STATE_NAME or _la==amachineParser.T_SYMBOL_NAME):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Am_state_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATE_NAME(self):
            return self.getToken(amachineParser.STATE_NAME, 0)

        def am_state_rules(self):
            return self.getTypedRuleContext(amachineParser.Am_state_rulesContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(amachineParser.NL)
            else:
                return self.getToken(amachineParser.NL, i)

        def getRuleIndex(self):
            return amachineParser.RULE_am_state_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAm_state_decl" ):
                return visitor.visitAm_state_decl(self)
            else:
                return visitor.visitChildren(self)




    def am_state_decl(self):

        localctx = amachineParser.Am_state_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_am_state_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(amachineParser.STATE_NAME)
            self.state = 125
            self.am_state_rules()
            self.state = 127 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 126
                    self.match(amachineParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 129 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Am_state_rulesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(amachineParser.WS)
            else:
                return self.getToken(amachineParser.WS, i)

        def am_state_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(amachineParser.Am_state_ruleContext)
            else:
                return self.getTypedRuleContext(amachineParser.Am_state_ruleContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(amachineParser.NL)
            else:
                return self.getToken(amachineParser.NL, i)

        def getRuleIndex(self):
            return amachineParser.RULE_am_state_rules

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAm_state_rules" ):
                return visitor.visitAm_state_rules(self)
            else:
                return visitor.visitChildren(self)




    def am_state_rules(self):

        localctx = amachineParser.Am_state_rulesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_am_state_rules)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 132 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 131
                        self.match(amachineParser.NL)
                        self.state = 134 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==amachineParser.NL):
                            break

                    self.state = 136
                    self.match(amachineParser.WS)
                    self.state = 137
                    self.am_state_rule()

                else:
                    raise NoViableAltException(self)
                self.state = 140 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Am_state_ruleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def am_state_rule_symbol(self):
            return self.getTypedRuleContext(amachineParser.Am_state_rule_symbolContext,0)


        def am_state_rule_actions(self):
            return self.getTypedRuleContext(amachineParser.Am_state_rule_actionsContext,0)


        def am_state(self):
            return self.getTypedRuleContext(amachineParser.Am_stateContext,0)


        def getRuleIndex(self):
            return amachineParser.RULE_am_state_rule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAm_state_rule" ):
                return visitor.visitAm_state_rule(self)
            else:
                return visitor.visitChildren(self)




    def am_state_rule(self):

        localctx = amachineParser.Am_state_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_am_state_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.am_state_rule_symbol()
            self.state = 143
            self.am_state_rule_actions()
            self.state = 144
            self.am_state()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Am_state_rule_symbolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WS(self):
            return self.getToken(amachineParser.WS, 0)

        def DEFAULT(self):
            return self.getToken(amachineParser.DEFAULT, 0)

        def T_SYMBOL_NAME(self):
            return self.getToken(amachineParser.T_SYMBOL_NAME, 0)

        def SYMBOL_NAME(self):
            return self.getToken(amachineParser.SYMBOL_NAME, 0)

        def getRuleIndex(self):
            return amachineParser.RULE_am_state_rule_symbol

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAm_state_rule_symbol" ):
                return visitor.visitAm_state_rule_symbol(self)
            else:
                return visitor.visitChildren(self)




    def am_state_rule_symbol(self):

        localctx = amachineParser.Am_state_rule_symbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_am_state_rule_symbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << amachineParser.DEFAULT) | (1 << amachineParser.T_SYMBOL_NAME) | (1 << amachineParser.SYMBOL_NAME))) != 0):
                self.state = 146
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << amachineParser.DEFAULT) | (1 << amachineParser.T_SYMBOL_NAME) | (1 << amachineParser.SYMBOL_NAME))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 147
                self.match(amachineParser.WS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Am_state_rule_actionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def am_state_rule_action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(amachineParser.Am_state_rule_actionContext)
            else:
                return self.getTypedRuleContext(amachineParser.Am_state_rule_actionContext,i)


        def getRuleIndex(self):
            return amachineParser.RULE_am_state_rule_actions

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAm_state_rule_actions" ):
                return visitor.visitAm_state_rule_actions(self)
            else:
                return visitor.visitChildren(self)




    def am_state_rule_actions(self):

        localctx = amachineParser.Am_state_rule_actionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_am_state_rule_actions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << amachineParser.PRINT) | (1 << amachineParser.LEFT) | (1 << amachineParser.RIGHT))) != 0):
                self.state = 150
                self.am_state_rule_action()
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Am_state_rule_actionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT(self):
            return self.getToken(amachineParser.LEFT, 0)

        def WS(self):
            return self.getToken(amachineParser.WS, 0)

        def RIGHT(self):
            return self.getToken(amachineParser.RIGHT, 0)

        def PRINT(self):
            return self.getToken(amachineParser.PRINT, 0)

        def symbol(self):
            return self.getTypedRuleContext(amachineParser.SymbolContext,0)


        def getRuleIndex(self):
            return amachineParser.RULE_am_state_rule_action

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAm_state_rule_action" ):
                return visitor.visitAm_state_rule_action(self)
            else:
                return visitor.visitChildren(self)




    def am_state_rule_action(self):

        localctx = amachineParser.Am_state_rule_actionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_am_state_rule_action)
        self._la = 0 # Token type
        try:
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [amachineParser.LEFT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.match(amachineParser.LEFT)
                self.state = 157
                self.match(amachineParser.WS)
                pass
            elif token in [amachineParser.RIGHT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 158
                self.match(amachineParser.RIGHT)
                self.state = 159
                self.match(amachineParser.WS)
                pass
            elif token in [amachineParser.PRINT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 160
                self.match(amachineParser.PRINT)
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==amachineParser.T_SYMBOL_NAME or _la==amachineParser.SYMBOL_NAME:
                    self.state = 161
                    self.symbol()


                self.state = 164
                self.match(amachineParser.WS)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symbol(self):
            return self.getTypedRuleContext(amachineParser.SymbolContext,0)


        def am_state(self):
            return self.getTypedRuleContext(amachineParser.Am_stateContext,0)


        def getRuleIndex(self):
            return amachineParser.RULE_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = amachineParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_name)
        try:
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [amachineParser.T_SYMBOL_NAME, amachineParser.SYMBOL_NAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.symbol()
                pass
            elif token in [amachineParser.T_STATE_NAME, amachineParser.STATE_NAME]:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.am_state()
                pass
            else:
                raise NoViableAltException(self)
